--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
-    "rewrites": [
-      {
-        "source": "/login",
-        "destination": "/login"
-      }
-    ]
-  }
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/"
+    }
+  ]
+}
